# infranim

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  demo.py  pyproject.toml
architecture/: README.md  api_contracts.py  core_design.puml  test_fixtures.py
claude_analysis/: project_overview.md
claude_findings/: 01_operator_overload_duplication.md  02_linear_lookups_performance.md  03_silent_svg_fallback.md  04_state_mutation_split_brain.md  05_magic_numbers.md  06_liskov_substitution_violation.md  07_thread_unsafe_global_state.md  08_conftest_fixture_type_gap.md  09_incorrect_assets_dir_path.md  10_reality_check_audit.md
claude_findings/gemini_guidance/: README.md  fix_01_operator_duplication.md  fix_02_linear_lookups.md  fix_03_silent_svg_fallback.md  fix_04_split_brain_state.md  fix_05_magic_numbers.md  fix_06_liskov_substitution.md  fix_07_thread_safety.md  fix_08_conftest_fixture.md  fix_09_assets_dir_path.md
inter-AI-talks/: claude_to_gemini.md  concerns_manifest.md
manim_devops/: adapter.py  cinematics.py  constants.py  core.py  layout.py
manim_devops/assets/: __init__.py  aws.py
publishing/: readiness_assessment.md
spikes/: README.md
spikes/spike_1/: business_logic.puml  (+2 more)
tests/: conftest.py  test_adapter.py  test_architecture_layout.py  test_aws_assets.py  test_cinematics.py  test_core.py  test_diagrams_adapter_visual.py  test_dynamic_visual_integration.py  test_final_integration.py  test_traffic_visual_integration.py  test_visual_rendering.py
thoughtprocess/: deep_research_ideas.md  devops_visualizer_research.md  ideas_and_reflections.md
(+35 files in other folders)
