[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manim-devops"
version = "0.1.0"
description = "Animate your cloud infrastructure as code. Converts architecture topologies into cinematic Manim videos."
readme = "README.md"
license = {text = "BSD-2-Clause"}
requires-python = ">=3.10"
dependencies = [
    "manim>=0.18.0",
    "networkx>=3.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "visual: marks tests that generate actual Manim video output (deselect with '-m \"not visual\"')",
]

[tool.setuptools.packages.find]
include = ["manim_devops*"]
